<resources>
    <string name="app_name">Madadgar</string>

    <string-array name="servicetypes">
        <item>Road Accident</item>
        <item>Fire Service</item>
        <item>Medical Emergency</item>
        <item>Building Collapse</item>
        <item>Drowing</item>
        <item>Blast</item>
    </string-array>

    <string-array name="bloodGroupTypesArray">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="emergencyTypesArray">
        <item>Accident</item>
        <item>Blast</item>
        <item>Building Collapse</item>
        <item>Drowning</item>
        <item>Fire</item>
        <item>Medical Emergency</item>
    </string-array>

    <string-array name="bloodRequestTypeArray">
        <item>Request Blood</item>
        <item>Donate Blood</item>
    </string-array>

    <string-array name="bdtype">
        <item>Blood Doner</item>
        <item>Blood Accepter</item>
    </string-array>

    <string name="title_activity_spdashboard">SPDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_server_provider_dashboard">Service Provider</string>
    <string name="title_activity_maps">Tracking</string>
    <string name="title_activity_map">Map</string>
    <string name="hint_email">abc@mail.com</string>
    <string name="hint_password">**********</string>
    <string name="content_register">Don\'t have an account, Register Here.</string>
    <string name="text_signIn">SignIn</string>
    <string name="hint_name">John e.g</string>
    <string name="register">Register</string>
    <string name="content_signIn">Already have Account ???</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_add_staff">Add Staff</string>
    <string name="text_view_profiles">View Profiles</string>
    <string name="delete">Delete</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.\\n \\nNulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,</string>
    <string name="report_emergency_case">Report Emergency Case</string>
    <string name="current_location">Current Location</string>
    <string name="emergency_details">Emergency Details</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update_status">Update Status</string>
    <string name="details">Enter Details</string>
    <string name="donate_request_blood">Donate/Request Blood</string>
    <string name="blood_quantity">Blood Quantity</string>
</resources>
