<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".activity.SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="96dp"
        app:srcCompat="@drawable/madadgar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Madadgar"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="normal|bold" />


    <TextView
        android:id="@+id/textView_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email:"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password:"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/button_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        android:enabled="false"
        android:text="@string/text_signIn"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/content_register"
        android:textAlignment="center"
        android:textStyle="normal|bold" />

</LinearLayout>
