<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:srcCompat="@drawable/madadgar" />

    <ScrollView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Madadgar"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="Register Yourself"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name:"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password:"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Blood Group Type:"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/spinner_bloodGroupType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:entries="@array/bloodGroupTypesArray" />

            <Button
                android:id="@+id/button_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:enabled="false"
                android:text="@string/register"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/content_signIn"
                android:textAlignment="center"
                android:textStyle="normal|bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
