<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:theme="@style/AppTheme">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView_emergencyImage"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toTopOf="@id/constraintLayout" />

            <TextView
                android:id="@+id/textView_uploadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload Image"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@id/imageView_emergencyImage"
                app:layout_constraintLeft_toLeftOf="@id/imageView_emergencyImage"
                app:layout_constraintRight_toRightOf="@id/imageView_emergencyImage"
                app:layout_constraintTop_toTopOf="@id/imageView_emergencyImage" />

            <TextView
                android:id="@+id/textView_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/report_emergency_case"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="@id/imageView_emergencyImage"
                app:layout_constraintRight_toRightOf="@id/imageView_emergencyImage"
                app:layout_constraintTop_toBottomOf="@id/imageView_emergencyImage" />

            <Spinner
                android:id="@+id/spinner_emergencyType"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_48sdp"
                android:layout_marginLeft="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_48sdp"
                android:layout_marginRight="@dimen/_48sdp"
                android:entries="@array/emergencyTypesArray"
                app:layout_constraintEnd_toEndOf="@+id/textView_heading"
                app:layout_constraintStart_toStartOf="@+id/textView_heading"
                app:layout_constraintTop_toBottomOf="@+id/textView_heading" />

            <TextView
                android:id="@+id/textView_emergencyLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_48sdp"
                android:layout_marginLeft="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_48sdp"
                android:layout_marginRight="@dimen/_48sdp"
                android:background="@drawable/drawable_edit_text"
                android:hint="@string/current_location"
                app:layout_constraintLeft_toLeftOf="@id/spinner_emergencyType"
                app:layout_constraintRight_toRightOf="@id/spinner_emergencyType"
                app:layout_constraintTop_toBottomOf="@id/spinner_emergencyType" />


            <EditText
                android:id="@+id/editText_emergencyDetails"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/drawable_edit_text"
                android:hint="@string/emergency_details"
                app:layout_constraintLeft_toLeftOf="@id/textView_emergencyLocation"
                app:layout_constraintRight_toRightOf="@id/textView_emergencyLocation"
                app:layout_constraintTop_toBottomOf="@id/textView_emergencyLocation" />

            <TextView
                android:id="@+id/textView_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/add"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintLeft_toLeftOf="@id/editText_emergencyDetails"
                app:layout_constraintRight_toLeftOf="@id/textView_cancel"
                app:layout_constraintTop_toBottomOf="@id/editText_emergencyDetails" />

            <TextView
                android:id="@+id/textView_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintLeft_toRightOf="@id/textView_add"
                app:layout_constraintRight_toRightOf="@id/editText_emergencyDetails"
                app:layout_constraintTop_toBottomOf="@id/editText_emergencyDetails" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>